syntax = "proto3";

package pollen.control.v1;

option go_package = "github.com/sambigeara/pollen/api/genpb/pollen/control/v1;controlv1";

service ControlService {
  rpc ListPeers(ListPeersRequest) returns (ListPeersResponse);
  rpc Connect(ConnectRequest) returns (ConnectResponse);
}

message ListPeersRequest {}
message ListPeersResponse {
  repeated bytes keys = 1;
}

message ConnectRequest {
  string peer_id = 1; // hex string of the peer's noise key
}
message ConnectResponse {
  string status = 1;
}
